2011-05-04  Alexis Menard  <alexis.menard@openbossa.org>

Reviewed by Gavin Barraclough.

        JITArithmetic.cpp produces a warning on a unused variable.
        https://bugs.webkit.org/show_bug.cgi?id=60060

        Just properly use what we already have converted.

        * jit/JITArithmetic.cpp:
        (JSC::JIT::emitSlow_op_add):
        (JSC::JIT::emitSlow_op_mul):

Canonical link: https://commits.webkit.org/75414@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@85729 268f45cc-cd09-0410-ab3c-d52691b4dbfc